Import of ZOFFIX/Spreadsheet-DataToExcel-0.0102 from CPAN.
gitpan-cpan-distribution: Spreadsheet-DataToExcel
gitpan-cpan-version:      0.0102
gitpan-cpan-path:         ZOFFIX/Spreadsheet-DataToExcel-0.0102.tar.gz
gitpan-cpan-author:       ZOFFIX
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Spreadsheet-DataToExcel
 
+0.0102  November 7, 2009
+        Fixed warnings that showed up for empty cells.
+
 0.0101  July 29, 2009
         First version, released on an unsuspecting world.
 
